--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -54,9 +54,9 @@
   {mccabe1976complexity}
 
 \lnPitch{
-\pptBanner{What is the complexity of this program?}
-\pptPic{.5}{cc.png}\par
-I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding-a-small-note-on-cyclomatic-complexity/}{here}.}
+  \pptBanner{What is the complexity of this program?}
+  \pptPic{.5}{cc.png}\par
+  I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding-a-small-note-on-cyclomatic-complexity/}{here}.}
 
 \lnThought{CC may correlate with other metrics.}
 
@@ -87,7 +87,7 @@ I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding
 \lnQuote
   [Joanne E. Hale]
   {joanne-hale}
-  {The models developed are found to successfully \ul{predict} roughly 90\% of CC’s variance by LOC alone. This suggest not only that the linear relationship between LOC and CC is stable, but the aspects of code complexity that CC measures, such as the size of the test case space, grow \ul{linearly} with source code size across languages and programming paradigms.}
+  {The models developed are found to successfully \ul{predict} roughly 90\% of CC's variance by LOC alone. This suggest not only that the linear relationship between LOC and CC is stable, but the aspects of code complexity that CC measures, such as the size of the test case space, grow \ul{linearly} with source code size across languages and programming paradigms.}
   {graylin2009cyclomatic}
 
 \lnQuote
