--- a/17-function-points/17-function-points.tex
+++ b/17-function-points/17-function-points.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Function Points}
 \begin{document}
 
-\plush{\lnTitlePage{17}{24}{}}
+\lnTitlePage{17}{24}{xt01nxxfAB0}
 
 \lnQuote
   {capers-jones}
@@ -53,18 +53,18 @@
   {albrecht1979measuring}
 
 \lnPitch{\begin{multicols}{2}
-\includegraphics[width=\linewidth]{factors.png}
-\par\columnbreak\par
-``If the inputs, outputs, or files are extra complicated, we add 5\%. Complex internal processing can add another 5\%. On-line functions and performance are addressed in other questions. The maximum adjustment possible is 50\%, expressed as \(\pm\)25\% so that the weighted summation is the average complexity.''\par
-{\scriptsize Source: \bibentry{albrecht1979measuring}\par}
-\end{multicols}}
+  \includegraphics[width=\linewidth]{factors.png}
+  \par\columnbreak\par
+  ``If the inputs, outputs, or files are extra complicated, we add 5\%. Complex internal processing can add another 5\%. On-line functions and performance are addressed in other questions. The maximum adjustment possible is 50\%, expressed as \(\pm\)25\% so that the weighted summation is the average complexity.''\par
+  {\scriptsize Source: \bibentry{albrecht1979measuring}\par}
+  \end{multicols}}
 
 \lnPitch{\begin{multicols}{2}
-\includegraphics[width=\linewidth]{functions.png}
-\par\columnbreak\par
-``In order to find the adjusted function point (AFP) value, the UFP (the raw function count weighted by the appropriate complexity shown in the Table) is multiplied by the VAF.''\par
-{\scriptsize Source: \bibentry{galorath2006software}\par}
-\end{multicols}}
+  \includegraphics[width=\linewidth]{functions.png}
+  \par\columnbreak\par
+  ``In order to find the adjusted function point (AFP) value, the UFP (the raw function count weighted by the appropriate complexity shown in the Table) is multiplied by the VAF.''\par
+  {\scriptsize Source: \bibentry{galorath2006software}\par}
+  \end{multicols}}
 
 \lnQuote
   {peter-chen}
@@ -72,9 +72,9 @@
   {chen1976entity}
 
 \lnPitch{
-\pptPic{.95}{er-diagram.png}
-\par
-{\scriptsize Source: \bibentry{chen1976entity}\par}}
+  \pptPic{.95}{er-diagram.png}
+  \par
+  {\scriptsize Source: \bibentry{chen1976entity}\par}}
 
 \lnQuote
   {tom-demarco}
@@ -82,9 +82,9 @@
   {demarco1978}
 
 \lnPitch{
-\pptPic{.75}{dfd.png}
-\par
-{\scriptsize Source: \bibentry{demarco1978}\par}}
+  \pptPic{.75}{dfd.png}
+  \par
+  {\scriptsize Source: \bibentry{demarco1978}\par}}
 
 \lnQuote
   {../17-function-points/sloc-vs-fps}
@@ -97,9 +97,9 @@
   {symons1991software}
 
 \lnPitch{
-\pptPic{.95}{mk-ii.png}
-\par
-{\scriptsize Source: \bibentry{symons1991software}\par}}
+  \pptPic{.95}{mk-ii.png}
+  \par
+  {\scriptsize Source: \bibentry{symons1991software}\par}}
 
 \lnQuote
   {daniel-galorath}
@@ -107,11 +107,11 @@
   {galorath2006software}
 
 \lnPitch{\begin{multicols}{2}
-\includegraphics[width=\linewidth]{seer-fbs.png}
-\par\columnbreak\par
-``SEER-FBS (``function-based sizing''), introduced in 1992, is consistent with IFPUG counting rules, but adds a sixth category (\ul{internal functions}) that allows users to account for highly algorithmic processes of systems such as real-time and embedded-type systems.''\par
-{\scriptsize Source: \bibentry{galorath2006software}\par}
-\end{multicols}}
+  \includegraphics[width=\linewidth]{seer-fbs.png}
+  \par\columnbreak\par
+  ``SEER-FBS (``function-based sizing''), introduced in 1992, is consistent with IFPUG counting rules, but adds a sixth category (\ul{internal functions}) that allows users to account for highly algorithmic processes of systems such as real-time and embedded-type systems.''\par
+  {\scriptsize Source: \bibentry{galorath2006software}\par}
+  \end{multicols}}
 
 \lnQuote
   {../17-function-points/cocomo-2}
@@ -119,11 +119,11 @@
   {boehm2000}
 
 \lnPitch{\begin{multicols}{2}
-\includegraphics[width=\linewidth]{loc-per-fp.png}
-\par\columnbreak\par
-``\ul{Backfiring} is converting lines of code to function points by dividing the line count by a \ul{conversion ratio}. The author does not recommend backfiring as an approach to generating function points.''\par
-{\scriptsize Source: \bibentry{galorath2006software}\par}
-\end{multicols}}
+  \includegraphics[width=\linewidth]{loc-per-fp.png}
+  \par\columnbreak\par
+  ``\ul{Backfiring} is converting lines of code to function points by dividing the line count by a \ul{conversion ratio}. The author does not recommend backfiring as an approach to generating function points.''\par
+  {\scriptsize Source: \bibentry{galorath2006software}\par}
+  \end{multicols}}
 
 \lnQuote
   {capers-jones}
@@ -131,35 +131,35 @@
   {iso20926foreword}
 
 \lnPitch{
-\pptBanner{IFPUG Procedure}
-\includegraphics[width=\linewidth]{ifpug-procedure.png}
-\par
-{\scriptsize Source: \bibentry{iso20926}\par}}
+  \pptBanner{IFPUG Procedure}
+  \includegraphics[width=\linewidth]{ifpug-procedure.png}
+  \par
+  {\scriptsize Source: \bibentry{iso20926}\par}}
 
 \lnPitch{\begin{multicols}{2}
-\includegraphics[width=\linewidth]{boundary.png}
-\par\columnbreak\par
-``The application \ul{boundary} indicates the border between the \ul{software} being measured and the \ul{user}.''\par
-{\scriptsize Source: \bibentry{iso20926}\par}
-\end{multicols}}
+  \includegraphics[width=\linewidth]{boundary.png}
+  \par\columnbreak\par
+  ``The application \ul{boundary} indicates the border between the \ul{software} being measured and the \ul{user}.''\par
+  {\scriptsize Source: \bibentry{iso20926}\par}
+  \end{multicols}}
 
 \lnPitch{\begin{multicols}{2}
-\includegraphics[width=.7\linewidth]{characteristics.png}
-\par\columnbreak\par
-``The 14 general system \ul{characteristics} are summarized into the \ul{value adjustment factor} (VAF). When applied, the value adjustment factor adjusts the \ul{unadjusted function point count} \(\pm\)35 percent to produce the \ul{adjusted function point count}.''\par
-{\scriptsize Source: \bibentry{iso20926}\par}
-\end{multicols}}
+  \includegraphics[width=.7\linewidth]{characteristics.png}
+  \par\columnbreak\par
+  ``The 14 general system \ul{characteristics} are summarized into the \ul{value adjustment factor} (VAF). When applied, the value adjustment factor adjusts the \ul{unadjusted function point count} \(\pm\)35 percent to produce the \ul{adjusted function point count}.''\par
+  {\scriptsize Source: \bibentry{iso20926}\par}
+  \end{multicols}}
 
 \lnPitch{\begin{multicols}{2}
-\includegraphics[width=.65\linewidth]{ufpc-example.png}
-\par\columnbreak\par
-``The formula calculates the \ul{development project function points}: \texttt{DFP = (UFP + CFP) * VAF}.
-Where
-UFP is the unadjusted function points for the functions that will be available after installation,
-and
-CFP is the unadjusted function points added by the conversion unadjusted function point count.''\par
-{\scriptsize Source: \bibentry{iso20926}\par}
-\end{multicols}}
+  \includegraphics[width=.65\linewidth]{ufpc-example.png}
+  \par\columnbreak\par
+  ``The formula calculates the \ul{development project function points}: \texttt{DFP = (UFP + CFP) * VAF}.
+  Where
+  UFP is the unadjusted function points for the functions that will be available after installation,
+  and
+  CFP is the unadjusted function points added by the conversion unadjusted function point count.''\par
+  {\scriptsize Source: \bibentry{iso20926}\par}
+  \end{multicols}}
 
 \lnQuote
   {roger-pressman}
@@ -177,22 +177,22 @@ CFP is the unadjusted function points added by the conversion unadjusted functio
   {low1990function}
 
 \lnPitch{\pptBanner{Function Point Standards}
-\begin{itemize}\setlength\itemsep{0pt}
-\item Mark-II --- ISO/IEC 20968:2002
-\item IFPUG --- ISO/IEC 20926:2009
-\item FiSMA --- ISO/IEC 29881:2010
-\item COSMIC --- ISO/IEC 19761:2011
-\item Nesma --- ISO/IEC 24570:2018
-\item OMG --- ISO/IEC 19515:2019
-\end{itemize}}
+  \begin{itemize}\setlength\itemsep{0pt}
+  \item Mark-II --- ISO/IEC 20968:2002
+  \item IFPUG --- ISO/IEC 20926:2009
+  \item FiSMA --- ISO/IEC 29881:2010
+  \item COSMIC --- ISO/IEC 19761:2011
+  \item Nesma --- ISO/IEC 24570:2018
+  \item OMG --- ISO/IEC 19515:2019
+  \end{itemize}}
 
 \lnPitch{\pptBanner{Some Other Function Points}
-\begin{itemize}\setlength\itemsep{0pt}
-\item Early and easy function points
-\item Engineering function points
-\item Object-Oriented Function Points (OOFP)
-\item Weighted Micro Function Points
-\item Fuzzy Function Points
-\end{itemize}}
+  \begin{itemize}\setlength\itemsep{0pt}
+  \item Early and easy function points
+  \item Engineering function points
+  \item Object-Oriented Function Points (OOFP)
+  \item Weighted Micro Function Points
+  \item Fuzzy Function Points
+  \end{itemize}}
 
 \end{document}
