--- a/05-maintainability-index/05-maintainability-index.tex
+++ b/05-maintainability-index/05-maintainability-index.tex
@@ -27,7 +27,8 @@
 
 \lnTitlePage{5}{24}{xnSnPfVkmkM}
 
-\plush{\pptPic{.6}{wtfs.png}}
+\plush{
+  \pptPic{.6}{wtfs.png}}
 
 \lnQuote
   [Fred Brooks]
@@ -53,19 +54,18 @@
   {oman1992metrics}
 
 \lnPitch{
-\pptBanner{Software Maintainability Taxonomy}
-\pptPic{.6}{tree.png}\par
-{\scriptsize Source: \bibentry{oman1992metrics}\par}}
+  \pptBanner{Software Maintainability Taxonomy}
+  \pptPic{.6}{tree.png}\par
+  {\scriptsize Source: \bibentry{oman1992metrics}\par}}
 
 \lnPitch{
-\pptBanner{Maintainability Formula}
-\begin{multicols}{2}
-\pptPic{.7}{formula-1.png}\par
-{\scriptsize Source: \bibentry{oman1992metrics}\par}
-\par\columnbreak\par
-``This formula represents the product of the weighted dimensions, where each dimension is measured as the average deviation from a known value of 'goodness' for that maintainability attribute.''
-\end{multicols}
-}
+  \pptBanner{Maintainability Formula}
+  \begin{multicols}{2}
+  \pptPic{.7}{formula-1.png}\par
+  {\scriptsize Source: \bibentry{oman1992metrics}\par}
+  \par\columnbreak\par
+  ``This formula represents the product of the weighted dimensions, where each dimension is measured as the average deviation from a known value of 'goodness' for that maintainability attribute.''
+  \end{multicols}}
 
 \lnQuote
   {paper-2}
@@ -73,25 +73,23 @@
   {coleman1994}
 
 \lnPitch{
-\pptBanner{First Approximation}
-\begin{multicols}{2}
-\pptPic{.95}{formula-2.png}
-\par\columnbreak\par
-``Approximately 50 regression models were constructed in an attempt to identify simple models that could be calculated from existing tools and still be generic enough to apply to a wide range of software systems. The regression model that seemed most applicable was a four-metric polynomial based on  \begin{inparaenum}[1)]\item Halstead’s effort, \item extended cyclomatic complexity, \item lines of code, and \item number of comments.\end{inparaenum}''
-\end{multicols}
-}
+  \pptBanner{First Approximation}
+  \begin{multicols}{2}
+  \pptPic{.95}{formula-2.png}
+  \par\columnbreak\par
+  ``Approximately 50 regression models were constructed in an attempt to identify simple models that could be calculated from existing tools and still be generic enough to apply to a wide range of software systems. The regression model that seemed most applicable was a four-metric polynomial based on  \begin{inparaenum}[1)]\item Halstead’s effort, \item extended cyclomatic complexity, \item lines of code, and \item number of comments.\end{inparaenum}''
+  \end{multicols}}
 
 \lnPitch{
-\pptBanner{The Formula of Maintainability Index}
-\begin{multicols}{2}
-\pptPic{.95}{formula-3.png}
-\par\columnbreak\par
-\textit{aveVol} --- average Halstead Volume in a module\par
-\textit{ave V(g')} --- average total cyclomatic complexity in a module\par
-\textit{aveLOC} --- average lines of code in a module\par
-\textit{perCM} --- average percent of comments in a module\par
-\end{multicols}
-}
+  \pptBanner{The Formula of Maintainability Index}
+  \begin{multicols}{2}
+  \pptPic{.95}{formula-3.png}
+  \par\columnbreak\par
+  \textit{aveVol} --- average Halstead Volume in a module\par
+  \textit{ave V(g')} --- average total cyclomatic complexity in a module\par
+  \textit{aveLOC} --- average lines of code in a module\par
+  \textit{perCM} --- average percent of comments in a module\par
+  \end{multicols}}
 
 \lnPitch{
   \pptBanner{Maintainability Index by Visual Studio}
@@ -110,7 +108,8 @@
   {We are convinced that Maintainability Index is \ul{nonsense}. We think that it is not sensible to reduce the maintainability of a whole software system to one single indicator.}
   {niedermayr2016}
 
-\plush{\pptThought{``The Maintainability Index does not provide information about the impact on development activities. A value of 57 does not express which maintainability aspects are affected by a bad value.'' --- Rainer Niedermayr}}
+\lnPitch{
+  \pptThought{``The Maintainability Index does not provide information about the impact on development activities. A value of 57 does not express which maintainability aspects are affected by a bad value.'' --- Rainer Niedermayr}}
 
 \lnQuote
   [Arie van Deursen]
@@ -118,7 +117,8 @@
   {If you are a researcher, \ul{think twice} before using the maintainability index in your experiments. Make sure you study and fully understand the original papers published about it.}
   {deursen2014}
 
-\plush{\pptThought{``Tool smiths and vendors used the exact same formula and coefficients as the 1994 experiments, without any recalibration.'' --- Arie van Deursen}}
+\lnPitch{
+  \pptThought{``Tool smiths and vendors used the exact same formula and coefficients as the 1994 experiments, without any recalibration.'' --- Arie van Deursen}}
 
 \lnQuote
   [Tim Gilboy]
@@ -126,7 +126,8 @@
   {If we're going to use the Maintainability Index we should use it to measure \ul{relative} maintainability within our project rather than use it as an \ul{absolute} metric.}
   {gilboy2022}
 
-\plush{\pptThought{\raggedright``Extending the length can significantly decrease Maintainability Index, even if all of the changes cause the code to be clearer and more understandable.'' --- Tim Gilboy}}
+\lnPitch{
+  \pptThought{\raggedright``Extending the length can significantly decrease Maintainability Index, even if all of the changes cause the code to be clearer and more understandable.'' --- Tim Gilboy}}
 
 \lnQuote
   [Tja\u{s}a Heri\u{c}ko]
@@ -134,15 +135,16 @@
   {When comparing maintainability measurements from several Index variants, the perception of maintainability could be impacted by the choice of the Index variant used.}
   {hericko2023}
 
-\lnPitch{Maintainability Index is supported by a few tools:
-\begin{itemize}
-\item \href{https://visualstudio.microsoft.com/}{Visual Studio} for C++ and others
-\item \href{https://www.sonarsource.com/products/sonarqube/}{SonarQube} for Java
-\item \href{https://www.verifysoft.com/en_maintainability.html}{Testwell} for Java and C++
-\item \href{https://radon.readthedocs.io/en/latest/index.html}{Radon} for Python
-\item \href{https://www.npmjs.com/package/jscomplexity}{jscomplexity} for JavaScript
-\item \href{https://github.com/yagipy/maintidx}{maintidx} for Go
-\end{itemize}}
+\lnPitch{
+  Maintainability Index is supported by a few tools:
+  \begin{itemize}
+  \item \href{https://visualstudio.microsoft.com/}{Visual Studio} for C++ and others
+  \item \href{https://www.sonarsource.com/products/sonarqube/}{SonarQube} for Java
+  \item \href{https://www.verifysoft.com/en_maintainability.html}{Testwell} for Java and C++ (not free)
+  \item \href{https://radon.readthedocs.io/en/latest/index.html}{Radon} for Python
+  \item \href{https://www.npmjs.com/package/jscomplexity}{jscomplexity} for JavaScript
+  \item \href{https://github.com/yagipy/maintidx}{maintidx} for Go
+  \end{itemize}}
 
 \lnQuote
   {slr}
